--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,19 @@
 <resources>
-    <string name="app_name">FlickrAPI</string>
+    <string name="app_name">Mova.io</string>
 
     <!-- DIALOG MESSAGES -->
     <string name="dialog_action_loading">Loading…</string>
     <string name="dialog_action_ok">OK</string>
     <string name="dialog_action_cancel">Cancel</string>
+
+    <!-- Errors -->
+    <string name="error_internet_connection">Cannot load data. Please check your network connection.</string>
+    <string name="error_text">Error %s</string>
+
+    <string name="search_input_hint">Type to search…</string>
+    <string name="search">Search</string>
+    <string name="ask_to_delete_photo">Do you want to delete this photo?</string>
+    <string name="delete">Delete</string>
+    <string name="no_photos_found">No photos was found</string>
+
 </resources>
